--- a/style.css
+++ b/style.css
@@ -411,6 +411,7 @@ body {
     }
 
     .habit_page .habit_info {
+        position: relative;
         color: #fff;
         display: flex;
         flex-direction: column;
@@ -419,7 +420,6 @@ body {
         padding: 24px;
         border-radius: 16px 16px 0px 0px;
         width: 100%;
-        height: 60%;
         background-color: #1c1c1c;
         z-index: 101;
     }
@@ -438,6 +438,41 @@ body {
         background-color: #59c33c;
     }
 
+    .habit_page .habit_info .head_box {
+        display: flex;
+        align-items: end;
+        justify-content: space-between;
+        width: 100%;
+        margin-bottom: 16px;
+    }
+
+    .habit_page .habit_info .head_box .text-box {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: center;
+    }
+
+    .habit_page .habit_info .head_box .buttons-box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .habit_page .habit_info .head_box .buttons-box button {
+        height: 48px;
+        width: 48px;
+        padding: 8px;
+        background-color: #373737;
+        margin: 4px;
+        border-radius: 8px;
+    }
+
+    .habit_page .habit_info .head_box .buttons-box button img {
+        width: 100%;
+        height: 100%;
+    }
+
     .habit_page .habit_info .habit-page-name {
         font-size: 36px;
         font-weight: 600;
@@ -446,7 +481,6 @@ body {
 
     .habit_page .habit_info .habit-page-start-time {
         color: #373737;
-        margin-bottom: 16px;
     }
 
     .habit_page .habit_info .progres-bar {
@@ -464,8 +498,8 @@ body {
         justify-content: center;
         position: relative;
         z-index: 101;
-        width: 250px;
-        height: 250px;
+        width: 200px;
+        height: 200px;
         border-radius: 50%;
         background-color: #373737;
     }
@@ -492,5 +526,58 @@ body {
         background-color: #59c33c;
     }
     
+    .edit-mode {
+        display: none;
+        z-index: 105;
+        border: 2px red solid;
+        position: absolute;
+        padding: 24px;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+    }
+
+    .edit-mode .edit-name {
+        background-color: transparent;
+        position: absolute;
+        height: 48px;
+        width: 170px;
+        top: 24px;
+        left: 24px;
+        font-size: 36px;
+        font-weight: 600;
+        color: #fff;
+    }
+
+    .edit-mode .edit-count {
+        z-index: 105;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80px;
+        background-color: transparent;
+        font-size: 48px;
+        font-weight: 500;
+        color: #fff;
+    }
+
+    .edit-mode .done-edit {
+        position: absolute;
+        bottom: 24px;
+        right: 24px;
+        left: 24px;
+        color: #fff;
+        font-size: 24px;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
+        margin-top: 16px;
+        height: 64px;
+        background-color: #59c33c;
+    }
 }
 
